--- a/carrusel.html
+++ b/carrusel.html
@@ -12,7 +12,7 @@
 <body>
      <nav>
         <ul id="listanav">
-            <li><a href="ejemplos.html">inicio</a></li>
+            <li><a href="index.html">inicio</a></li>
         </ul>
     </nav>   
 <div id="carouselExampleFade" class="carousel slide carousel-fade">
