--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
     
 <body> 
-    <nav>
-        <ul id="listanav">
-            <li><a href="carrusel.html">armas</a></li>
-        </ul>
-    </nav>
+    <nav class="navbar bg-body-tertiary">
+  <div class="container-fluid">
+    <form class="d-flex" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
     <div class="texto">
     
         <h1>Pagina de la escuela</h1>
