--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
     
 <body> 
-    <nav class="navbar bg-body-tertiary">
+   <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
+    <a class="navbar-brand" href="#">navegacion</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="index.html">inicio</a>
+        <a class="nav-link" href="carrusel.html">armas</a>
+      </div>
+    </div>
   </div>
 </nav>
     <div class="texto">
