--- a/carrusel.html
+++ b/carrusel.html
@@ -10,6 +10,7 @@
 </head>
     
 <body>
+  <h1>La Desert Eagle es una pistola semiautomática de gran calibre conocida por su potente capacidad de disparo y su diseño distintivo. Es operada por gas, lo que la diferencia de otras pistolas que utilizan sistemas de retroceso. Si bien es popular en medios de comunicación como películas y videojuegos, su gran tamaño y peso la hacen menos práctica para uso militar o policial</h1>
      <nav>
         <ul id="listanav">
             <li><a href="index.html">inicio</a></li>
@@ -36,5 +37,10 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
+<p>Desert Eagle
+Peso	1,9 kg (máximo)
+Longitud	260 mm
+Longitud del cañón	152 mm
+Munición	.357 Magnum .41 Magnum .44 Magnum .440 Cor-bon .50 Action Express</p>
 </body>
 </html>
