--- a/carrusel.html
+++ b/carrusel.html
@@ -13,6 +13,7 @@
   <nav>
         <ul id="listanav">
             <li><a href="index.html">inicio</a></li>
+        <a class="nav-link" href="carrusel.html">armas</a>
         </ul>
     </nav> 
     <h1>La Desert Eagle es una pistola semiautomática de gran calibre conocida por su potente capacidad de disparo y su diseño distintivo. Es operada por gas, lo que la diferencia de otras pistolas que utilizan sistemas de retroceso. Si bien es popular en medios de comunicación como películas y videojuegos, su gran tamaño y peso la hacen menos práctica para uso militar o policial</h1>
