--- a/carrusel.html
+++ b/carrusel.html
@@ -21,7 +21,10 @@
       <img src="img/desert eagle.webp" class="d-block w-100" alt="pistola desert eagle">
     </div>
     <div class="carousel-item">
-      <img src="img/m4.webp" class="d-block w-100" alt="pistola m4">
+      <img src="img/0cm8r8gz1hn1gsvuijc3ti7mi-lg.jpg" class="d-block w-100" alt="pistola m4">
+    </div>
+    <div class="carousel-item">
+      <img src="img/png-clipart-imi-desert-eagle-50-action-express-firearm-50-caliber-handguns-44-magnum-handgun-handgun-ammunition.png" class="d-block w-100" alt="pistola m4">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
