--- a/carrusel.html
+++ b/carrusel.html
@@ -36,8 +36,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the first item’s accordion body.</strong> 
-La Desert Eagle, conocida coloquialmente como Deagle, es una pistola semiautomática de acción simple , operada por gas , capaz de alojar el cartucho . 50 Action Express , el cartucho de fuego central más grande de cualquier pistola semiautomática alimentada por cargador, y una serie de otros calibres grandes. <code>.accordion-body</code>, though the transition does limit overflow.
+        <strong></strong> La Desert Eagle, conocida coloquialmente como Deagle, es una pistola semiautomática de acción simple , operada por gas , capaz de alojar el cartucho . 50 Action Express , el cartucho de fuego central más grande de cualquier pistola semiautomática alimentada por cargador, y una serie de otros calibres grandes. <code></code>
       </div>
     </div>
   </div>
