--- a/carrusel.html
+++ b/carrusel.html
@@ -48,8 +48,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the second item’s accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-      </div>
+        <strong></strong>La Glock 20 del calibre 10 mm ofrece un poder de fuego masivo. La utilización del polímero Glock de alta tecnología, reduce notablemente el retroceso. Con una energía a boca de cañón de 750 joules y una capacidad del cargador de 15 cartuchos, es la acompañante confortable para cualquier cacería. <code></code>
     </div>
   </div>
   <div class="accordion-item">
@@ -60,7 +59,8 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the third item’s accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <strong></strong> El 92FS nunca deja de ofrecer una precisión y fiabilidad extraordinarias en las condiciones más exigentes. Su diseño de corredera abierta y el óptimo ángulo y alimentación de la recámara permiten una alimentación ultra fiable de munición comercial.
+ <code></code>
       </div>
     </div>
   </div>
