--- a/metra.html
+++ b/metra.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="metra.css">
 </head>
 <body>
+    
+  <nav>
+        <ul id="listanav">
+            <li><a href="index.html">inicio</a></li>
+        </ul>
+    </nav> 
     <div class="texto">
     
         <h1>metralletas</h1>
     </div>
+    </nav> 
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
     <div class="carousel-inner">
     <div class="carousel-item active">
