--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="index.html">inicio</a>
         <a class="nav-link" href="carrusel.html">armas</a>
+        <a class="nav-link" href="metra.html">metra</a>
       </div>
     </div>
   </div>
