--- a/metra.html
+++ b/metra.html
@@ -21,16 +21,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
     <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/shutterstock_102492452_1.jpg" class="d-block w-100" alt="pistola desert eagle">
-    </div>
-    <div class="carousel-item">
-      <img src="img/mini_gun0012.jpg" class="d-block w-100" alt="pistola m4">
+      <img src="img/960px-Barrett-M82A1-Independence-Day-2017-IZE-048-white.jpg" class="d-block w-100" alt="pistola desert eagle">
     </div>
     <div class="carousel-item">
       <img src="img/ametralladora.png" class="d-block w-100" alt="pistola m4">
     </div>
     <div class="carousel-item">
-      <img src="img/960px-Barrett-M82A1-Independence-Day-2017-IZE-048-white.jpg" class="d-block w-100" alt="pistola m4">
+      <img src="img/shutterstock_102492452_1.jpg" class="d-block w-100" alt="pistola m4">
     </div>
   </div>
   <div class="accordion" id="accordionExample">
@@ -70,5 +67,14 @@
       </div>
     </div>
   </div>
+</div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 </body>
