--- a/metra.html
+++ b/metra.html
@@ -17,57 +17,18 @@
     
         <h1>metralletas</h1>
     </div>
-    </nav> 
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
-    <div class="carousel-inner">
+  <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/960px-Barrett-M82A1-Independence-Day-2017-IZE-048-white.jpg" class="d-block w-100" alt="pistola desert eagle">
+      <img src="img/960px-Barrett-M82A1-Independence-Day-2017-IZE-048-white.jpg" class="d-block w-100" alt="">
     </div>
     <div class="carousel-item">
-      <img src="img/ametralladora.png" class="d-block w-100" alt="pistola m4">
+      <img src="img/ametralladora.png" class="d-block w-100" alt="">
     </div>
     <div class="carousel-item">
-      <img src="img/shutterstock_102492452_1.jpg" class="d-block w-100" alt="pistola m4">
+      <img src="img/png-clipart-imi-desert-eagle-50-action-express-firearm-50-caliber-handguns-44-magnum-handgun-handgun-ammunition.png" class="d-block w-100" alt="">
     </div>
   </div>
-  <div class="accordion" id="accordionExample">
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        Accordion Item #1
-      </button>
-    </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong></strong> La Desert Eagle, conocida coloquialmente como Deagle, es una pistola semiautomática de acción simple , operada por gas , capaz de alojar el cartucho . 50 Action Express , el cartucho de fuego central más grande de cualquier pistola semiautomática alimentada por cargador, y una serie de otros calibres grandes. <code></code>
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        Accordion Item #2
-      </button>
-    </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong></strong>La Glock 20 del calibre 10 mm ofrece un poder de fuego masivo. La utilización del polímero Glock de alta tecnología, reduce notablemente el retroceso. Con una energía a boca de cañón de 750 joules y una capacidad del cargador de 15 cartuchos, es la acompañante confortable para cualquier cacería. <code></code>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Accordion Item #3
-      </button>
-    </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong></strong> El 92FS nunca deja de ofrecer una precisión y fiabilidad extraordinarias en las condiciones más exigentes. Su diseño de corredera abierta y el óptimo ángulo y alimentación de la recámara permiten una alimentación ultra fiable de munición comercial.
- <code></code>
-      </div>
-    </div>
-  </div>
-</div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
