--- a/metra.html
+++ b/metra.html
@@ -26,7 +26,7 @@
       <img src="img/ametralladora.png" class="d-block w-100" alt="">
     </div>
     <div class="carousel-item">
-      <img src="img/png-clipart-imi-desert-eagle-50-action-express-firearm-50-caliber-handguns-44-magnum-handgun-handgun-ammunition.png" class="d-block w-100" alt="">
+      <img src="img/shutterstock_102492452_1.jpg" class="d-block w-100" alt="">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -47,7 +47,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the first item’s accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <strong></strong> La palabra "sniper" se refiere a un francotirador, un soldado o miembro de fuerzas especiales que dispara con un arma de alta precisión a objetivos a distancia, a menudo desde posiciones ocultas. También puede referirse a un videojuego o película con el mismo nombre. <code></code>
       </div>
     </div>
   </div>
@@ -59,7 +59,7 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the second item’s accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <strong></strong>Ametralladora , arma automática de pequeño calibre capaz de disparar con rapidez y de forma sostenida . La mayoría de las ametralladoras se alimentan por cinta y disparan de 500 a 1000 balas por minuto, y continúan disparando mientras se mantenga apretado el gatillo o hasta que se agote la munición.<code></code>
       </div>
     </div>
   </div>
@@ -71,7 +71,7 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the third item’s accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <strong></strong>El AK-47, también conocido como Avtomat Kalashnikova 1947, es un rifle de asalto soviético diseñado por Mijaíl Kalashnikov en 1947. Se trata de un arma ampliamente utilizada y producida, conocida por su fiabilidad, simplicidad y facilidad de fabricación. Es el arma estándar de infantería en numerosos países y se ha convertido en un ícono cultural. <code></code>
       </div>
     </div>
   </div>
