--- a/index.html
+++ b/index.html
@@ -16,17 +16,24 @@
 
     </div>
     
-   <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="index.html">inicio</a>
-        <a class="nav-link" href="carrusel.html">armas</a>
-        <a class="nav-link" href="metra.html">metra</a>
-      </div>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="carrusel.html">pistolas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="metra.html">metralletas</a>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
