--- a/metra.html
+++ b/metra.html
@@ -19,7 +19,7 @@
     </nav>
     <div class="texto">
 
-        <h1>metralletas</h1>
+        <h1>otros tipos de armas</h1>
     </div>
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
         <div class="carousel-inner">
