--- a/metra.html
+++ b/metra.html
@@ -12,11 +12,31 @@
 
 <body>
 
-    <nav>
-        <ul id="listanav">
-            <li><a href="index.html">inicio</a></li>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="carrusel.html">pistolas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="metra.html">armas</a>
+          </li>
         </ul>
-    </nav>
+      </div>
+    </div>
+  </nav>
+  <nav>
+
+  </nav>
     <div class="texto">
 
         <h1>otros tipos de armas</h1>
