--- a/carrusel.html
+++ b/carrusel.html
@@ -10,7 +10,11 @@
 </head>
     
 <body>
-  
+   
+    <div class="texto">
+
+        <h1>tus amigas las pistolas</h1>
+    </div>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="">Navbar</a>
