--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
   <div>
     <div class="card" style="width: 18rem;">
       <img src="img/mini_gun0012.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-     <h5 class="card-title">armas de alto calibre</h5>
-     <p class="card-text">La Minigun es una ametralladora multicañón con una elevada cadencia de fuego (miles de balas por minuto), que emplea el sistema Gatling de cañones rotativos accionado por un motor eléctrico alimentado desde una fuente de energía externa. Una GAU-17/A montada en una lancha rápida de la Armada de los Estados Unidos</p>
-      <a href="metra.html" class="btn btn-primary">metralladora</a>
+      <div class="card-body">
+        <h5 class="card-title">armas de alto calibre</h5>
+        <p class="card-text">La Minigun es una ametralladora multicañón con una elevada cadencia de fuego (miles de balas por minuto), que emplea el sistema Gatling de cañones rotativos accionado por un motor eléctrico alimentado desde una fuente de energía externa. Una GAU-17/A montada en una lancha rápida de la Armada de los Estados Unidos</p>
+        <a href="metra.html" class="btn btn-primary">metralladora</a>
+      </div>
     </div>
     </div>
       <div class="card" style="width: 18rem;">
