--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="stylesheet" href="stiles.css ">
 </head>
 
@@ -40,27 +41,29 @@
       </div>
     </div>
   </nav>
-  <nav>
-
-  </nav>
-  <div>
+  <div class="d-flex flex-row mb-3">
     <div class="card" style="width: 18rem;">
       <img src="img/mini_gun0012.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">armas de alto calibre</h5>
-        <p class="card-text">La Minigun es una ametralladora multicañón con una elevada cadencia de fuego (miles de balas por minuto), que emplea el sistema Gatling de cañones rotativos accionado por un motor eléctrico alimentado desde una fuente de energía externa. Una GAU-17/A montada en una lancha rápida de la Armada de los Estados Unidos</p>
+        <p class="card-text">La Minigun es una ametralladora multicañón con una elevada cadencia de fuego (miles de
+          balas por minuto), que emplea el sistema Gatling de cañones rotativos accionado por un motor eléctrico
+          alimentado desde una fuente de energía externa. Una GAU-17/A montada en una lancha rápida de la Armada de los
+          Estados Unidos</p>
         <a href="metra.html" class="btn btn-primary">metralladora</a>
       </div>
     </div>
+  <div class="card" style="width: 18rem;">
+    <img
+      src="img/png-clipart-imi-desert-eagle-50-action-express-firearm-50-caliber-handguns-44-magnum-handgun-handgun-ammunition.png"
+      class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">pistola</h5>
+      <p class="card-text">Una pistola es un arma de fuego corta diseñada para ser apuntada y disparada con una sola
+        mano, o con dos. Se puede utilizar para la caza dependiendo del arma, ​​​ y dispara balas a corta distancia</p>
+      <a href="carrusel.html" class="btn btn-primary">pistolas</a>
     </div>
-      <div class="card" style="width: 18rem;">
-      <img src="img/png-clipart-imi-desert-eagle-50-action-express-firearm-50-caliber-handguns-44-magnum-handgun-handgun-ammunition.png" class="card-img-top" alt="...">
-      <div class="card-body">
-       <h5 class="card-title">pistola</h5>
-       <p class="card-text">Una pistola es un arma de fuego corta diseñada para ser apuntada y disparada con una sola mano, o con dos. Se puede utilizar para la caza dependiendo del arma, ​​​ y dispara balas a corta distancia</p>
-       <a href="carrusel.html" class="btn btn-primary">pistolas</a>
-      </div>
-    </div>
+  </div>
   </div>
 </body>
 
