--- a/carrusel.html
+++ b/carrusel.html
@@ -31,7 +31,10 @@
             <a class="nav-link" href="carrusel.html">pistolas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="metra.html">armas</a>
+            <a class="nav-link" href="metra.html">armas de fuego</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blancas.html">armas blancas</a>
           </li>
         </ul>
       </div>
