--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
       <a href="carrusel.html" class="btn btn-primary">pistolas</a>
     </div>
   </div>
+  <div class="card" style="width: 18rem;">
+    <img
+      src="img/412817c1e720a9e6c164a37f732f6b3f.jpg"
+      class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">armas blancas</h5>
+      <p class="card-text">Un arma blanca es cualquier objeto afilado o puntiagudo que se utiliza para cortar, punzar o herir, y se diferencia de las armas de fuego porque no requiere munición ni propelente. El término "arma blanca" se refiere a la apariencia brillante del metal pulido, típicamente acero, que se utilizaba para fabricarlas.  </p>
+      <a href="blancas.html" class="btn btn-primary">armas blancas</a>
+    </div>
+  </div>
   </div>
 </body>
 
