--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="texto">
 
-    <h1>Pagina de la escuela</h1>
+    <h1>Pagina de armas</h1>
 
     <p>probando la primera pagina de 5° año</p>
 
