--- a/blancas.html
+++ b/blancas.html
@@ -29,7 +29,7 @@
             <a class="nav-link" href="carrusel.html">pistolas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="metra.html">armas de fuego</a>
+            <a class="nav-link" href="metra.html">armas de alto calibre</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="blancas.html">armas blancas</a>
