--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="">Navbar</a>
+      <a class="navbar-brand" href="">paginas de armas</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -46,8 +46,8 @@
   </nav>
   <div class="d-flex flex-row mb-3">
     <div class="card" style="width: 18rem;">
-      <img src="img/mini_gun0012.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
+      <img src="img/mini_gun0012.jpg" class="card-img-top" alt="">
+      <div class="card-body"flex-wrap: wrap>
         <h5 class="card-title">armas de alto calibre</h5>
         <p class="card-text">La Minigun es una ametralladora multicañón con una elevada cadencia de fuego (miles de
           balas por minuto), que emplea el sistema Gatling de cañones rotativos accionado por un motor eléctrico
