--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="d-flex flex-row mb-3">
     <div class="card" style="width: 18rem;">
       <img src="img/mini_gun0012.jpg" class="card-img-top" alt="">
-      <div class="card-body"flex-wrap: wrap>
+      <div class="card-body"dfgv>
         <h5 class="card-title">armas de alto calibre</h5>
         <p class="card-text">La Minigun es una ametralladora multicañón con una elevada cadencia de fuego (miles de
           balas por minuto), que emplea el sistema Gatling de cañones rotativos accionado por un motor eléctrico
